<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/rick_blue_dark"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textColor="@color/rick_green_neon"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_text"
        android:minHeight="48dp"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_text"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_text"
        android:minHeight="48dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnRegisterAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:backgroundTint="@color/rick_green_neon"
        android:textColor="@color/rick_blue_dark"/>

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back_login"
        android:backgroundTint="@color/rick_yellow"
        android:textColor="@color/rick_blue_dark"
        android:layout_marginTop="8dp"/>

</LinearLayout>