<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_screen_title"
        android:textColor="@color/rick_green_neon"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_language"
        android:minHeight="48dp"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_theme"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"/>
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_logout"
        android:backgroundTint="@color/logout_red"
        android:layout_marginTop="32dp"/>

</LinearLayout>