<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/rick_blue_dark"
    android:padding="24dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/logo"
        android:layout_marginBottom="32dp"
        />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_text"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_text"
        android:minHeight="48dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnLoginAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:backgroundTint="@color/rick_green_neon"
        android:textColor="@color/rick_blue_dark"/>

    <Button
        android:id="@+id/btnGoToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:backgroundTint="@color/rick_yellow"
        android:textColor="@color/rick_blue_dark"/>

</LinearLayout>