<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episode_name_placeholder"
            android:textColor="@color/rick_green_neon"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvDetailInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_info_placeholder"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchSeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_mark_seen"
            android:textColor="@color/rick_green_neon"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characters_title"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCharacters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>