<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardEpisode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/rick_green_neon"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEpisodeCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episode_code_placeholder"
                android:textColor="@color/rick_blue_dark"
                android:textStyle="bold"
                android:textSize="18sp" />
            <ImageView
                android:id="@+id/ivSeenCheck"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@android:drawable/checkbox_on_background"
                android:layout_marginStart="16dp"
                app:tint="@color/rick_yellow"
                android:visibility="gone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvEpisodeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episode_name_placeholder"
            android:textColor="@color/rick_blue_dark"
            android:textSize="16sp"
            android:layout_marginTop="4dp"/>
        <TextView
            android:id="@+id/tvEpisodeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episode_date_placeholder"
            android:textColor="@color/rick_blue_dark"
            android:textSize="12sp"
            android:layout_marginTop="4dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>